--- a/css/style.css
+++ b/css/style.css
@@ -172,12 +172,15 @@ header b {
 }
 
 .button {
-  -moz-animation-name: glow;
-  -moz-animation-duration: 2s;
-  -moz-animation-iteration-count: infinite;
   -webkit-animation-name: glow;
   -webkit-animation-duration: 2s;
   -webkit-animation-iteration-count: infinite;
+  -moz-animation-name: glow;
+  -moz-animation-duration: 2s;
+  -moz-animation-iteration-count: infinite;
+  -o-animation-name: glow;
+  -o-animation-duration: 2s;
+  -o-animation-iteration-count: infinite;
   animation-name: glow;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -298,21 +301,21 @@ CSS3 ANIMATIONS
 /*Glow Effect*/
 @-moz-keyframes glow {
   0% {
-    box-shadow: 0 0 5px;
+    -moz-box-shadow: 0 0 5px #33ad5c;
   }
 
   50% {
-    box-shadow: 0 0 30px #33ad5c;
+    -moz-box-shadow: 0 0 30px #33ad5c;
   }
 
   100% {
-    box-shadow: 0 0 5px;
+    -moz-box-shadow: 0 0 5px #33ad5c;
   }
 }
 
 @-webkit-keyframes glow {
   0% {
-    box-shadow: 0 0 5px;
+    box-shadow: 0 0 5px #33ad5c;
   }
 
   50% {
@@ -320,13 +323,13 @@ CSS3 ANIMATIONS
   }
 
   100% {
-    box-shadow: 0 0 5px;
+    box-shadow: 0 0 5px #33ad5c;
   }
 }
 
 @keyframes glow {
   0% {
-    box-shadow: 0 0 5px;
+    box-shadow: 0 0 5px #33ad5c;
   }
 
   50% {
@@ -334,7 +337,7 @@ CSS3 ANIMATIONS
   }
 
   100% {
-    box-shadow: 0 0 5px;
+    box-shadow: 0 0 5px #33ad5c;
   }
 }
 
