--- a/css/style.scss
+++ b/css/style.scss
@@ -119,11 +119,11 @@ header {
   font-weight: 400;
 }
 .flat {
-  font-family: accidentals, Verdana, sans-serif;
+  font-family: 'accidentals', Verdana, sans-serif;
   font-size: 22px;
 }
 .sharp {
-  font-family: accidentals, Verdana, sans-serif;
+  font-family: 'accidentals', Verdana, sans-serif;
   font-size: 24px;
 }
 
