--- a/css/style.css
+++ b/css/style.css
@@ -109,12 +109,12 @@ header b {
 }
 
 .flat {
-  font-family: accidentals, Verdana, sans-serif;
+  font-family: 'accidentals', Verdana, sans-serif;
   font-size: 22px;
 }
 
 .sharp {
-  font-family: accidentals, Verdana, sans-serif;
+  font-family: 'accidentals', Verdana, sans-serif;
   font-size: 24px;
 }
 
